-Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
-Reworked parts of Brittany's mission tree structure and improved several missions
-To end the Fragmentation of Poland you now need to pacify all nationalist rebels
-The Polish Church no longer supports foreigners during the Fragmentation of Poland
-Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
-Russian core countries are less likely to secede if the province owner is not an appanage
-Turkish beyliks will no longer grant Dhimmi autonomy
-Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
-Any Southern Italian provinces and tags now also leave the Empire if the Emperor fails to avert the Shadow Kingdom incident
-Sardinia-Piedmont's Age of Ideology ability is now -10 global years of separatism
-Swapped Phrygian and Cappadokian culture colours
-Changed Ingolstadt's trade good to wine
-Changed Fife's traditions for the glory of Dundee
-Minor history changes especially around Saxony and the Palatinate

#Balance
-Byzantium now starts in 1054 with numerous negative modifiers that must be removed via decisions to avoid the Crisis
-Byzantium no longer starts with the Theme System modifier but can regain it after the Crisis
-Progress toward the Crisis now accelerates if Byzantium has Overextension
-The Crisis can no longer be stopped by releasing a buffer state and granting it provinces
-Byzantium will no longer get free monarch points through Purple Phoenix events while they are an Eastern Monarchy
-The Seljuks will raid Byzantiums provinces already before the Crisis
-It is no longer possible to take the Russian Crown while having the Eastern Monarchy government
-Players now get recurring events to deal with the rise of the Italian Communes after the event for them to start spawning has fired