@@ -69,6 +69,7 @@ NDefines.NCountry.REBEL_ARTILLERY_INCREASE_LEVEL_2_TECH = 50
 NDefines.NCountry.TECH_TIME_COST = 0.2
 NDefines.NCountry.NAVAL_ATTRITION_ALERT_ATTRITION = 1
 NDefines.NCountry.ARMY_PROFESSIONALISM_PER_AGE = 0.1
+NDefines.NCountry.REVOLUTION_SPREAD_COUNT = 7
 
 
 NDefines.NEconomy.MERCHANT_TIME_DISTANCE = 0.15
