@@ -412,7 +412,7 @@ edwardian_isolation = {
 	build_cost = -0.25
 }
 old_and_sick = {
-	monarch_lifespan = -1
+	monarch_lifespan = -0.5
 	heir_chance = -0.5
 	block_introduce_heir = yes
 }
