@@ -32,6 +32,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
@@ -63,6 +64,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
@@ -94,6 +96,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
@@ -125,6 +128,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
@@ -156,6 +160,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
@@ -187,6 +192,7 @@ country_event = {
 
 	is_triggered_only = yes
 	trigger = {
+		tag = BYZ
 		OR = {
 			has_disaster = byz_crisis
 			NOT = { is_year = 1075 }
