@@ -221,7 +221,7 @@
  byz_bureaucrats_d_desc: "Die Bürokraten in Konstantinopel versuchten, die Macht der Dynatoi einzudämmen, indem sie die Bauern vom Militärdienst befreiten, was die Bürokratie und die Aristokratie in Rivalität verwickelte und die Effizienz der Verwaltung untergrub. Unsere Bürokratie muss reformiert werden, um sicherzustellen, dass sie zu unseren Gunsten arbeitet und nicht im Sinne kleinlicher Fraktionskämpfe."
  byz_defenses_d_title: "Repariert die Befestigungsanlagen"
  byz_defenses_d_desc: "Um Kosten zu sparen, wurden die großen stehenden Heere, die die instabile armenische Grenze gegen die aufkommenden türkischen Angriffe verteidigen sollten, nach und nach aufgelöst, wodurch das anatolische Hinterland verwundbar wurde, da die Verteidigungsanlagen dem Verfall preisgegeben wurden. Eine unserer Hauptaufgaben muss es sein, die baufälligen Befestigungen zu sanieren, damit Plünderer nicht unkontrolliert unsere Grenzen überqueren können."
- byz_defenses_d.tt: "Own at least §Y5§! forts of any level on a border with countries with a §YMuslim§! religion and a capital in the §YMesopotamia§! superregion"
+ byz_defenses_d.tt: "Besitzt mindestens §Y5§! Forts irgendeiner Stufe an der Grenze zu Ländern mit §Ymuslimischer§! Religion und einer Hauptstadt in der Überregion §YMesopotamien§!"
  byz_army_d_title: "Professionalisiert die Armee"
  byz_army_d_desc: "Um die schwindenden Zahlen in den Berufsarmeen zu kompensieren, mussten die Bürokraten stattdessen auf sehr teure ausländische Söldner mit zweifelhafter Loyalität zum Staat und widersprüchlichen eigenen Ambitionen zurückgreifen, die oft gegen unsere Interessen arbeiten. Wir müssen unsere professionellen Einheiten wie die Tagmata wieder in den Vordergrund rücken, damit wir uns nicht bei ausländischen Glücksrittern verschulden."
  byz_unrest_d_title: "Besänftigt die Bauernschaft"
