@@ -3,7 +3,7 @@
  RELIGIOUS_CONFLICT_RULES_ON: "§YReligiöser Konflikt§!\n- Kreuzzüge können vom Kontrolleur der Kurie ausgerufen werden.\n- Katholische Herrscher können exkommuniziert werden.\n- Katholische Monarchien haben Ritterorden. \n- Reformationszentren können auftauchen.\n- Religion hat Einfluss auf Diplomatie."
  RELIGIOUS_CONFLICT_RULES_OFF: "Dieses Zeitalter hat keine besonderen religiösen Konflikte. Reformationszentren wurden aufgelöst, Kreuzzüge beendet, Ritterorden aufgelöst und der Papst kann nicht mehr exkommunizieren." 
 #Nobles Estate
- byz_aristocrats_p: "Ermutigt Aristokraten"
+ byz_aristocrats_p: "Ermutigte Aristokraten"
  byz_aristocrats_p_desc: "Da der Staat durch die jüngsten Eroberungen von Basileios II. reicher geworden ist, hat die landbesitzende Aristokratie, die als Dynatoi bekannt ist, ihre Macht stetig vergrößert, ihre privaten Ländereien vergrößert und die freien Bauern ungestraft unterjocht."
  estate_ealdormen: "Ealdormen"
  estate_vitings: "Vitings"
