@@ -28,7 +28,7 @@
 -Reworked parts of Brittany's mission tree structure and improved several missions
 -To end the Fragmentation of Poland you now need to pacify all nationalist rebels
 -The Polish Church no longer supports foreigners during the Fragmentation of Poland
--Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
+-Blocked Edward the Confessor from introducing an heir manually
 -Russian core countries are less likely to secede if the province owner is not an appanage
 -Turkish beyliks will no longer grant Dhimmi autonomy
 -Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
@@ -47,6 +47,7 @@
 -Byzantium will no longer get free monarch points through Purple Phoenix events while they are an Eastern Monarchy
 -The Seljuks will raid Byzantiums provinces already before the Crisis
 -It is no longer possible to take the Russian Crown while having the Eastern Monarchy government
+-The Center of Revolution will now spread the Revoution to 7 provinces simultaneously
 -Players now get recurring events to deal with the rise of the Italian Communes after the event for them to start spawning has fired
 -Slightly upped the rate at which advisor cost increases
 -Nerfed unrest modifiers given from several missions
